WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207457
[geolocation] Fix non-unified build issues
https://bugs.webkit.org/show_bug.cgi?id=207457
Summary
[geolocation] Fix non-unified build issues
Adrian Perez
Reported
2020-02-10 03:53:00 PST
SSIA.
Attachments
Patch
(1.93 KB, patch)
2020-02-10 03:55 PST
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2020-02-10 03:55:16 PST
Created
attachment 390244
[details]
Patch
Adrian Perez
Comment 2
2020-02-10 03:56:13 PST
I'm letting the EWS run on the patch before landing as unreviewed build fix =)
Adrian Perez
Comment 3
2020-02-10 06:03:47 PST
Comment on
attachment 390244
[details]
Patch Setting cq+ as the ios-wk2 EWS issue is unrelated.
WebKit Commit Bot
Comment 4
2020-02-10 06:48:42 PST
Comment on
attachment 390244
[details]
Patch Clearing flags on attachment: 390244 Committed
r256167
: <
https://trac.webkit.org/changeset/256167
>
WebKit Commit Bot
Comment 5
2020-02-10 06:48:44 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2020-02-10 06:49:15 PST
<
rdar://problem/59309470
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug