[geolocation] Fix non-unified build issues https://bugs.webkit.org/show_bug.cgi?id=207457

Unreviewed build fix.

No new tests needed.


* UIProcess/GeolocationPermissionRequestManagerProxy.h: Add missing includes.
* UIProcess/WebGeolocationManagerProxy.cpp: Ditto.


Canonical link: https://commits.webkit.org/220452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256167 268f45cc-cd09-0410-ab3c-d52691b4dbfc